...
        bottom: TabBar(
          controller: _tabController,
          isScrollable: true,
          labelColor: Colors.white, // Seçili tab'ın rengi
          //unselectedLabelColor: Colors.white70, // Seçili olmayan tab'ların rengi
          tabs: const [
            Tab(icon: Icon(Icons.restaurant_menu), text: 'Menu'),
            Tab(icon: Icon(Icons.inventory), text: 'Inventory'),
            Tab(icon: Icon(Icons.assessment), text: 'Reports'),
            Tab(icon: Icon(Icons.people), text: 'Staff'),
            Tab(icon: Icon(Icons.settings), text: 'Settings'),
          ],
        ),
...
